--- a/index.html
+++ b/index.html
@@ -1,74 +1,136 @@
 <html>
+
 <head>
-<title> HOJA DE VIDA DE PABLO GARCÍA RÍOS</title>
-<link rel="stylesheet" href="style.css">
+  <title> HOJA DE VIDA DE PABLO GARCÍA RÍOS</title>
+  <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
   <div id="hojaDeVida">
-<p><b><h1><font> HOJA DE VIDA</font>  </H1></b></P>
-<hr>
-</div>
-<P><b><H2>DATOS PRESONALES</H2></b></P>
-<TR>
-<TABLE border="1" width="45%" height="60" >
-<TR><TD><B>Cedula:  </B></TD> <TD >1001457074</TD>
-<TD rowspan="12"><img src="https://scontent.feoh1-1.fna.fbcdn.net/v/t1.0-9/122098720_3406624542750624_2464246311030912671_n.jpg?_nc_cat=101&ccb=2&_nc_sid=09cbfe&_nc_eui2=AeG9pBfQ4PMewggsHqgT19RU9MR-VhIEGiP0xH5WEgQaI_zzXc-D7qvJiWGUrQp3RLEXDVgNRVp7NG-zmV7EYrWh&_nc_ohc=gAhxppDIJ0QAX9Uara-&_nc_ht=scontent.feoh1-1.fna&oh=da39ed29875b37582255448bc9f20671&oe=5FDEFB4A" width="250" height="250"></TD> </TR>
-<TR><TD><B>Apellidos:  </B></TD> <TD>García Ríos</TD>   
-<TR><TD><B>Nombres:  </B></TD> <TD>Pablo</TD> 
-<TR><TD><B>Nacionalidad:  </B></TD> <TD>Colombiana</TD> 
-<TR><TD><B>Lugar de Nacimiento:  </B></TD>
-  <TD>Envigado. Antioquia.</TD> 
-<TR><TD><B>Fecha de Nacimiento:  </B></TD>
-  <TD> 31 de marzo del 2001</TD> 
-  <TR><TD><B>Edad:  </B></TD>
-  <TD>19 </TD> 
-<TR><TD><B>Estado Civil:  </B></TD>
-  <TD>Soltero
-<TR><TD><B>Direccion:  </B></TD>
-  <TD>Km 17 Vía Las Palmas</TD>
-<TR><TD><B>Email:  </B></TD>
-  <TD>pablogarcia12357@gmail.com </TD>  
-<TR><TD><B>Celular:  </B></TD>
-  <TD>320 3461141</TD> 
+    <p><b>
+        <h1>
+          <font> HOJA DE VIDA</font>
+        </H1>
+      </b></P>
+  </div>
+  <P><b>
+      <div id="datosPersonal">
+        <H2>DATOS PERSONALES</H2>
+    </b></P>
+  <TR>
+    <TABLE border="1" width="45%" height="60">
+      <TR>
+        <TD><B>Cédula: </B></TD>
+        <TD>1001457074</TD>
+        <TD rowspan="12"><img
+            src="https://scontent.feoh1-1.fna.fbcdn.net/v/t1.0-9/122098720_3406624542750624_2464246311030912671_n.jpg?_nc_cat=101&ccb=2&_nc_sid=09cbfe&_nc_eui2=AeG9pBfQ4PMewggsHqgT19RU9MR-VhIEGiP0xH5WEgQaI_zzXc-D7qvJiWGUrQp3RLEXDVgNRVp7NG-zmV7EYrWh&_nc_ohc=gAhxppDIJ0QAX9Uara-&_nc_ht=scontent.feoh1-1.fna&oh=da39ed29875b37582255448bc9f20671&oe=5FDEFB4A"
+            width="250" height="250"></TD>
+      </TR>
+      <TR>
+        <TD><B>Apellidos: </B></TD>
+        <TD>García Ríos</TD>
+      <TR>
+        <TD><B>Nombres: </B></TD>
+        <TD>Pablo</TD>
+      <TR>
+        <TD><B>Nacionalidad: </B></TD>
+        <TD>Colombiana</TD>
+      <TR>
+        <TD><B>Lugar de Nacimiento: </B></TD>
+        <TD>Envigado. Antioquia.</TD>
+      <TR>
+        <TD><B>Fecha de Nacimiento: </B></TD>
+        <TD> 31 de marzo del 2001</TD>
+      <TR>
+        <TD><B>Edad: </B></TD>
+        <TD>19 </TD>
+      <TR>
+        <TD><B>Estado Civil: </B></TD>
+        <TD>Soltero
+      <TR>
+        <TD><B>Direccion: </B></TD>
+        <TD>Km 17 Vía Las Palmas</TD>
+      <TR>
+        <TD><B>Email: </B></TD>
+        <TD>pablogarcia12357@gmail.com </TD>
+      <TR>
+        <TD><B>Celular: </B></TD>
+        <TD>320 3461141</TD>
 
-</TABLE>
-<hr>
+    </TABLE>
+    </div>
+    <div id="descripcion">
+      <H2> DESCRIPCIÓN</H2>
 
-<H2> DESCRIPCIÓN</H2>
+      <p><b>Normalmente una persona alegre con un caracter poco fuerte.</b> </p>
+      <p><b>Amante del deporte, la buena salud y la mejor música.</b></p>
+      <p><b>Le gusta ser colaborativo con la mayoría de las personas.</b></p>
+    </div>
+    <div id="experiencia">
+      <P><b>
+          <H2>EXPERIENCIAS LABORALES</H2>
+        </b></P>
+      <TABLE BORDER="1" width="49%" height="45">
+        <TR>
+          <TD><B>Mesero: </B></TD>
+          <TD>Sancho Paisa</TD>
+        <TR>
+          <TD><B> Bartender/ Barman: </B></TD>
+          <TD> Sancho Paisa</TD>
+        <TR>
+          <TD><B> Cajero: </B></TD>
+          <TD> Tata´s Burguer</TD>
+        <TR>
+          <TD><B> Steward: </B></TD>
+          <TD> Sancho Paisa</TD>
+      </table>
+    </div>
+    <div id="cursos">
+      <P><b>
+          <H2>CURSOS REALIZADOS</H2>
+        </b></P>
+      <TABLE BORDER="1" width="49%" height="45">
+        <TR>
+          <TD><B>Fundamentos básicos de Scrum.</B></TD>
+        </TR>
+        <TD><B>Desarrollo web Front End.</B></TD>
+        <TR>
+          <TD><B>Mindfulness.</B></TD>
+        </TR>
+        <TR>
+          <TD><B>Taller de emprendimiento.</B></TD>
+        </TR>
+        <TR>
+          <TD><B>¿Cómo ser un emprendedor exitoso?</B></TD>
+        </TR>
+        <TR>
+          <TD><B>Fundamentos lógica de programación.</B></TD>
+        </TR>
+      </table>
+    </div>
+    <div id="referencias">
+      <P><b>
+          <H2><b>REFERENCIAS PERSONALES</H2>
+        </b></P>
 
-<p><b>Normalmente una persona alegre con un caracter poco fuerte.</b</p>
-<p><b>Amante del deporte, la buena salud y la mejor música.</b></p>
-<p><b>Le gusta sewr colaborativo con la mayoría de las personas.</b></p>
-<hr>
+      <TABLE BORDER="1" width="49%" height="45">
+        <TR>
+          <TD><B>Jhon Jairo Rueda García</B></TD>
+          <TD>310 5071384</TD>
+        </TR>
+        <TR>
+          <TD><B>María Elena Ríos Montoya</B></TD>
+          <TD>312 7818262</TD>
+        </TR>
+        <TR>
+          <TD><B>Claudia Janeth Ríos Montoya</B></TD>
+          <TD>311 3780088</TD>
+        </TR>
+      </table>
+    </div>
 
-<P><b><H2>EXPERIENCIAS LABORALES</H2></b></P>
-
-<TABLE BORDER="1"width="49%" height="45">
-    <TR><TD><B>Mesero: </B></TD> <TD>Sancho Paisa</TD>
-    <TR><TD><B> Bartender/ Barman: </B></TD> <TD> Sancho Paisa</TD>
-    <TR><TD><B> Cajero: </B></TD> <TD> Tata´s Burguer</TD>      
-    <TR><TD><B> Steward: </B></TD> <TD> Sancho Paisa</TD>
-</table>
-<hr>
-<P><b><H2>CURSOS REALIZADOS</H2></b></P>
-<TABLE BORDER="1"width="49%" height="45">
-<TR><TD><B>Fundamentos básicos de Scrum.</B></TD></TR>
-<TD><B>Desarrollo web Front End.</B></TD>
-<TR><TD><B>Mindfulness.</B></TD></TR>
-<TR><TD><B>Taller de emprendimiento.</B></TD></TR>
-<TR><TD><B>¿Cómo ser un emprendedor exitoso?</B></TD></TR>
-<TR><TD><B>Fundamentos lógica de programación.</B></TD></TR>
-</table>
-<hr>
-
-<P><b><H2><b>REFERENCIAS PERSONALES</H2></b></P>
-
-<TABLE BORDER="1"width="49%" height="45">
-
-</table>
-
-
-</TABLE>
+    </TABLE>
 </body>
+
 </html>
