--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <p><b>Normalmente una persona alegre con un caracter poco fuerte.</b> </p>
       <p><b>Amante del deporte, la buena salud y la mejor música.</b></p>
       <p><b>Le gusta ser colaborativo con la mayoría de las personas.</b></p>
+      <p><b>Es un deportista de alto rendimiento con experiencias en competencias a nivel departamental y próximamente a nivel nacional e internacional.</b></p>
     </div>
     <div id="experiencia">
       <P><b>
