--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       <p><b>Normalmente una persona alegre con un caracter poco fuerte.</b> </p>
       <p><b>Amante del deporte, la buena salud y la mejor música.</b></p>
       <p><b>Le gusta ser colaborativo con la mayoría de las personas.</b></p>
-      <p><b>Es un deportista de alto rendimiento con experiencias en competencias a nivel departamental y próximamente a nivel nacional e internacional.</b></p>
+      <p><b>Es un deportista de alto rendimiento con experiencias en competencias a nivel departamental y próximamente a
+          nivel nacional e internacional.</b></p>
     </div>
     <div id="experiencia">
       <P><b>
@@ -130,8 +131,26 @@
         </TR>
       </table>
     </div>
+    <P><B>
+      <div id="estudios">
+        <H2>Estudios realizados</H2>
+      </B></P>
 
-    </TABLE>
+    <TABLE BORDER="1" width="49%" height="45">
+      <TR>
+        <TD>Báchiller</TD>
+        <TD>Institución Educativa Las Palmas</TD>
+      </TR>
+      <TR>
+        <TD>Idioma Inglés <B>(B1)</B></TD>
+        <TD>Colombo Centro Americano. EAFIT</TD>
+      </TR>
+      <TR>
+        <TD>Programación de Software</TD>
+        <TD><B>JÓVENES CREATIVOS 2020</B></TD>
+      </TR>
+    </table>
+    </div>
 </body>
 
 </html>
